--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -9,3 +9,40 @@ body,
     height: 100%;
     overflow: hidden;
 }
+
+/* Interface */
+
+.interface
+{
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+}
+
+.contacts-bar
+{
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 25%;
+    height: 40px;
+    transform: translateX(-50%); 
+    color: #ffffff;
+    background: #00000035;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    pointer-events: none;
+    user-select: none;
+}
+
+.contact
+{
+    padding: 10px;
+}
+
+
+
