--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -21,6 +21,8 @@ body,
 
 }
 
+/* Contacts */
+
 .contacts-bar
 {
     display: flex;
@@ -84,4 +86,38 @@ body,
     width: 100%;
     left: 0;
     background: #ffffff;
+}
+
+/* Header */
+
+.header
+{
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    padding-top: 2%;
+    width: 100%;
+    height: 10%;
+    color: #ffffff; 
+
+}
+
+.header .title-section
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #00000035;
+    width: 16%;
+    border-radius: 10px;
+    opacity: 0;
+}
+
+.header .title-section .title
+{
+    font-size: 36px;
+    font-family: "sans-serif, serif, Times New Roman";
+    user-select: none;
 }
