--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -92,15 +92,17 @@ body,
 
 .header
 {
-    position: absolute;
+    position: fixed;
     left: 0;
-    top: 0;
+    top: 2%;
     display: flex;
     justify-content: center;
-    padding-top: 2%;
+    /* padding-top: 2%; */
     width: 100%;
     height: 10%;
     color: #ffffff; 
+    z-index: -1;
+    opacity: 0;
 
 }
 
@@ -112,7 +114,6 @@ body,
     background-color: #00000035;
     width: 16%;
     border-radius: 10px;
-    opacity: 0;
 }
 
 .header .title-section .title
@@ -121,3 +122,52 @@ body,
     font-family: "sans-serif, serif, Times New Roman";
     user-select: none;
 }
+
+.header .exit-button
+{
+    position: absolute;
+    right: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #00000035;
+    width: 16%;
+    height: 100%;
+    border-radius: 10px;
+    color: #ffffff;
+    font-size: 36px;
+    border: none;
+    cursor: pointer;
+    user-select: none;
+    font-family: "sans-serif, serif, Times New Roman";
+}
+
+
+/* About */
+
+.about
+{
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 13%;
+    left: 0;
+    width: 50%;
+    height: 75%;
+    background-color: #00000070;
+    opacity: 0;
+    z-index: -1;
+    overflow-y: scroll;
+}
+
+.about .about-section
+{
+    color: #ffffff;
+    user-select: none;
+    pointer-events: none;
+    padding-top: 35px;
+    padding-left: 35px;
+    padding-right: 35px;
+    font-family: "sans-serif, serif, Times New Roman";
+}
+
