--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -10,6 +10,23 @@ body,
     overflow: hidden;
 }
 
+/* Scroll Bar */
+/* width */
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #000000f0;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #ffffff;
+}
+
+
 /* Interface */
 
 .interface
@@ -18,7 +35,6 @@ body,
     left: 0;
     width: 100%;
     height: 100%;
-
 }
 
 /* Contacts */
@@ -103,6 +119,7 @@ body,
     color: #ffffff; 
     z-index: -1;
     opacity: 0;
+    user-select: none;
 
 }
 
@@ -158,6 +175,7 @@ body,
     opacity: 0;
     z-index: -1;
     overflow-y: scroll;
+    direction: ltr;
 }
 
 .about .about-section
@@ -186,6 +204,7 @@ body,
     opacity: 0;
     z-index: -1;
     overflow-y: scroll;
+    direction: ltr;
 }
 
 .skills .skills-section
@@ -214,6 +233,7 @@ body,
     opacity: 0;
     z-index: -1;
     overflow-y: scroll;
+    direction: ltr;
 }
 
 .projects .projects-section
@@ -242,6 +262,7 @@ body,
     opacity: 0;
     z-index: -1;
     overflow-y: scroll;
+    direction: rtl;
 }
 
 .experience .experience-section
@@ -270,6 +291,7 @@ body,
     opacity: 0;
     z-index: -1;
     overflow-y: scroll;
+    direction: rtl;
 }
 
 .resume .resume-section
