--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -168,7 +168,8 @@ body,
     position: absolute;
     top: 20%;
     right: 0;
-    width: 50%;
+    width: clamp(800px, 60vw, 100%);
+    max-width: 100%;
     height: 68%;
     background-color: #000000f0;
     opacity: 0;
@@ -206,7 +207,8 @@ body,
     position: absolute;
     top: 20%;
     right: 0;
-    width: 50%;
+    width: clamp(800px, 60vw, 100%);
+    max-width: 100%;
     height: 68%;
     background-color: #000000f0;
     opacity: 0;
@@ -264,7 +266,8 @@ body,
     position: absolute;
     top: 20%;
     left: 0;
-    width: 50%;
+    width: clamp(800px, 60vw, 100%);
+    max-width: 100%;
     height: 68%;
     background-color: #000000f0;
     opacity: 0;
@@ -293,7 +296,8 @@ body,
     position: absolute;
     top: 20%;
     left: 0;
-    width: 50%;
+    width: clamp(800px, 60vw, 100%);
+    max-width: 100%;
     height: 68%;
     background-color: #000000f0;
     opacity: 0;
