--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -219,6 +219,11 @@ body,
 
 .skills-section
 {
+    display: grid;
+    grid-template-columns: auto auto;
+    width: 100%;
+    column-gap: 3rem;
+    row-gap: 2rem;
     color: #ffffff;
     user-select: none;
     pointer-events: none;
@@ -226,6 +231,50 @@ body,
     padding-left: 35px;
     padding-right: 35px;
     font-family: "sans-serif, serif, Times New Roman";
+}
+
+
+.skills-category > h1
+{
+    text-align: center;
+    background-color: rgb(40, 40, 40);
+    padding: 18px;
+    border-radius: 10px;
+    border-color:white;
+    border-width: 3px;
+    border-style: solid;
+}
+
+.skills-list
+{
+    display: grid;
+    grid-template-columns: repeat(4, 100px);
+    column-gap: 1rem;
+    height: 80%;
+}
+
+.skills-item
+{
+    text-align: center;
+    background-color: rgb(40, 40, 40);
+    border-radius: 10px;
+    border-color:white;
+    border-width: 3px;
+    border-style: solid;
+    height: 100px;
+}
+
+.skills-item > svg
+{
+    padding-top: 10px;
+    width: 60%;
+    height: 60%;
+}
+
+.skills-item > h4
+{
+    padding: 0;
+    margin: 0;
 }
 
 /* Projects */
