--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -198,6 +198,21 @@ body,
     padding-bottom: 30px;
 }
 
+.about-item
+{
+    border-style: solid;
+    border-radius: 10px;
+    border-width: 2px;
+    border-color: white;
+    padding: 30px;
+    margin-top: 15px;
+}
+
+.about-item > h1
+{
+    text-align: center;
+}
+
 /* Skills */
 
 .skills
@@ -237,7 +252,7 @@ body,
 .skills-category > h1
 {
     text-align: center;
-    background-color: rgb(40, 40, 40);
+    background-color: rgb(0, 0, 0);
     padding: 18px;
     border-radius: 10px;
     border-color:white;
@@ -256,7 +271,7 @@ body,
 .skills-item
 {
     text-align: center;
-    background-color: rgb(40, 40, 40);
+    background-color: rgb(0, 0, 0);
     border-radius: 10px;
     border-color:white;
     border-width: 3px;
@@ -284,10 +299,10 @@ body,
     display: flex;
     justify-content: center;
     position: absolute;
-    top: 20%;
+    top: 14%;
     left: 0;
     width: 100%;
-    height: 68%;
+    height: 78%;
     background-color: #000000f0;
     opacity: 0;
     z-index: -1;
@@ -297,13 +312,61 @@ body,
 
 .projects-section
 {
+    display: grid;
+    grid-template-columns: auto;
+    column-gap: 1rem;
+    row-gap: 5rem;
     color: #ffffff;
     user-select: none;
-    pointer-events: none;
     padding-top: 35px;
     padding-left: 35px;
     padding-right: 35px;
     font-family: "sans-serif, serif, Times New Roman";
+    width: 100%;
+}
+
+.project-card
+{
+    display: flex;
+    flex-direction: row;
+    height: 750px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 10px;
+    border-width: 2px;
+    border-color: white;
+    border-style: solid;
+    text-align: center;
+}
+
+.left-card
+{
+    position: relative;
+    width: 40%;
+    height: 75%;
+    top: 12%;
+    left: 3.5%;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: white;
+}
+
+.right-card
+{
+    position: relative;
+    width: 50%;
+    top: 12%;
+    left: 6%;
+}
+
+video
+{
+    width: 100%;
+    height: 75%;
+    border-radius: 10px;
+    border-color: white;
+    border-style: solid;
+    border-width:2px;
 }
 
 /* Experience */
@@ -364,4 +427,23 @@ body,
     padding-left: 35px;
     padding-right: 35px;
     font-family: "sans-serif, serif, Times New Roman";
+}
+
+.resume-item
+{
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    width: 900px;
+    padding-top: 30px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: white;
+    border-radius: 10px;
+}
+
+.resume-item > img
+{
+    width: 850px;
+    padding-bottom: 25px;
 }
