--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -51,8 +51,8 @@ body,
     transform: translateX(-50%); 
     color: #ffffff;
     background: #000000f0;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    border-top-left-radius: 0.5em;
+    border-top-right-radius: 0.5em;
     user-select: none;
 }
 
@@ -130,7 +130,7 @@ body,
     align-items: center;
     background-color: #000000f0;
     width: 16%;
-    border-radius: 10px;
+    border-radius: 0.5em;
 }
 
 .header .title-section .title
@@ -150,7 +150,7 @@ body,
     background-color: #000000f0;
     width: 16%;
     height: 100%;
-    border-radius: 10px;
+    border-radius: 0.5em;
     color: #ffffff;
     font-size: 36px;
     border: none;
@@ -191,7 +191,7 @@ body,
 .about-description
 {
     font-size: 20px;
-    line-height: 1.4;
+    line-height: 1.8;
     padding-top: 5px;
     padding-left: 35px;
     padding-right: 35px;
@@ -201,16 +201,24 @@ body,
 .about-item
 {
     border-style: solid;
-    border-radius: 10px;
+    border-radius: 0.5em;
     border-width: 2px;
     border-color: white;
-    padding: 30px;
+    padding-right: 30px;
+    padding-left: 30px;
+    padding-bottom: 15px;
     margin-top: 15px;
 }
 
 .about-item > h1
 {
     text-align: center;
+}
+
+.about-item > hr
+{
+    display: block;
+    width: 95%;
 }
 
 /* Skills */
@@ -254,7 +262,7 @@ body,
     text-align: center;
     background-color: rgb(0, 0, 0);
     padding: 18px;
-    border-radius: 10px;
+    border-radius: 0.5em;
     border-color:white;
     border-width: 3px;
     border-style: solid;
@@ -272,7 +280,7 @@ body,
 {
     text-align: center;
     background-color: rgb(0, 0, 0);
-    border-radius: 10px;
+    border-radius: 0.5em;
     border-color:white;
     border-width: 3px;
     border-style: solid;
@@ -331,11 +339,11 @@ body,
     flex-direction: row;
     height: 750px;
     background-color: rgb(0, 0, 0);
-    border-radius: 10px;
+    border-radius: 0.5em;
     border-width: 2px;
     border-color: white;
     border-style: solid;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .left-card
@@ -345,10 +353,111 @@ body,
     height: 75%;
     top: 12%;
     left: 3.5%;
-    border-radius: 10px;
+    border-radius: 0.5em;
     border-style: solid;
     border-width: 2px;
     border-color: white;
+    font-size: clamp(1rem, 2vw, 1.25rem);
+}
+
+.left-card > h1
+{
+    text-align: center;
+    padding-top: 10px;
+}
+
+.left-card > hr
+{
+    display: block;
+    width: 75%;
+}
+
+.left-card > p
+{
+    line-height: clamp(1rem, 2vw, 2rem);
+    padding-top: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.project-skills
+{
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    justify-content: center;
+}
+
+.project-skills > p
+{
+    padding: 10px;
+    background-color: #1f1f1ff0;
+    border-radius: 0.5em;
+    border-color: white;
+    border-width: 2px;
+    border-style: solid;
+}
+
+.project-links
+{
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    justify-content: center;
+    padding-top: 15px;
+}
+
+.project-links > a
+{
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    color: white;
+    border: white 0.1em solid;
+    border-radius: 0.5em;
+    padding: 0.5em 0em;
+    width: 20%;
+    background-color: #1f1f1ff0;
+
+    text-shadow: 0 0 0.5em hsl(0, 0%, 100% / 0.75);
+    box-shadow: inset 0 0 0.5em 0 hsl(0, 0%, 100%), 0 0 0.5em 0 hsl(0, 0%, 100%);
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background-color 100ms linear;
+}
+
+.project-links > a::after
+{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 0.5em;
+    box-shadow: 0 0 2em 0.5em hsl(0, 0%, 100%);
+    opacity: 0;
+    transition: opacity 100ms linear;
+}
+
+.project-links > a:hover,
+.project-links > a:focus
+{
+    background-color: hsl(0, 0%, 100%);
+    color: black;
+    text-shadow: none;
+}
+
+.project-links > a:focus:not(:hover) 
+{
+    color: hsl(0, 0%, 100%);
+    background-color: #1f1f1ff0;
+}
+
+.project-links > a:hover::after
+{
+    opacity: 0.25;
 }
 
 .right-card
@@ -363,11 +472,35 @@ video
 {
     width: 100%;
     height: 75%;
-    border-radius: 10px;
+    border-radius: 0.5em;
     border-color: white;
     border-style: solid;
     border-width:2px;
 }
+
+/* For tablets */
+@media (max-width: 1280px) 
+{
+    .project-skills
+    {
+        display: grid;
+        grid-template-columns: repeat(3, auto);
+        gap: 5px;
+    }
+
+    .project-skills > p
+    {
+        text-align: center;
+        font-size: 0.8rem;
+    }
+
+    .left-card > p
+    {
+        padding-left: 12px;
+        padding-right: 12px;
+    }
+}
+
 
 /* Experience */
 
@@ -439,7 +572,7 @@ video
     border-style: solid;
     border-width: 2px;
     border-color: white;
-    border-radius: 10px;
+    border-radius: 0.5em;
 }
 
 .resume-item > img
