Added basic info for experience section

--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -152,7 +152,7 @@ body,
     background-color: #000000f0;
     width: 16%;
     height: 100%;
-    border-radius: 0.5em;
+    border-radius: 0.2em;
     border: white 2px solid;
     border-width: 2px;
     color: #ffffff;
@@ -194,7 +194,7 @@ body,
 .about-description
 {
     font-size: 20px;
-    line-height: 1.8;
+    line-height: 2rem;
     padding-top: 5px;
     padding-left: 35px;
     padding-right: 35px;
@@ -526,6 +526,10 @@ video
 
 .experience-section
 {
+    display: flex;
+    justify-content: center;
+    /* width: 100%; */
+    /* height: 100%; */
     color: #ffffff;
     user-select: none;
     pointer-events: none;
@@ -533,6 +537,49 @@ video
     padding-left: 35px;
     padding-right: 35px;
     font-family: "sans-serif, serif, Times New Roman";
+    direction: ltr;
+}
+
+.experience-card
+{
+    /* height: auto; */
+    /* width: 95%; */
+    border: white 2px solid;
+    border-radius: 0.5em;
+}
+
+.experience-card-header
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: clamp(0.75rem, 2vw, 1rem);
+}
+
+.experience-card-header > h1
+{
+    padding-left: 15px;
+}
+
+.experience-card-header > h2
+{
+    padding-left: 8px;
+    padding-top: 6px;
+}
+
+.experience-card-header > h3
+{
+    position: absolute;
+    right: 8%;
+    padding-top: 8px;
+}
+
+.experience-card-body
+{
+    padding-left: 25px;
+    padding-right: 25px;
+    line-height: 2rem;
+    font-size: 1.25rem;
 }
 
 /* Resume */
