--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -114,14 +114,13 @@ body,
     top: 2%;
     display: flex;
     justify-content: center;
-    /* padding-top: 2%; */
+    padding-top: 2.5px;
     width: 100%;
     height: 10%;
     color: #ffffff; 
     z-index: -1;
     opacity: 0;
     user-select: none;
-
 }
 
 .header .title-section
@@ -130,7 +129,7 @@ body,
     justify-content: center;
     align-items: center;
     background-color: #000000f0;
-    width: 16%;
+    width: 16rem;
     border-radius: 0.5em;
     border: white 2px solid;
 }
@@ -150,7 +149,7 @@ body,
     justify-content: center;
     align-items: center;
     background-color: #000000f0;
-    width: 16%;
+    width: 8rem;
     height: 100%;
     border-radius: 0.2em;
     border: white 2px solid;
@@ -605,11 +604,11 @@ video
 {
     color: #ffffff;
     user-select: none;
-    pointer-events: none;
     padding-top: 35px;
     padding-left: 35px;
     padding-right: 35px;
     font-family: "sans-serif, serif, Times New Roman";
+    direction: ltr;
 }
 
 .resume-item
@@ -629,4 +628,25 @@ video
 {
     width: 850px;
     padding-bottom: 25px;
+}
+
+.resume-download
+{
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+}
+
+.resume-download > a
+{
+    color: white;
+    width: 20%;
+    padding: 15px;
+    font-size: 2rem;
+    font-weight: bold;
+    border: white 2px solid;
+    border-radius: 0.25em;
+    text-decoration: none;
+    text-align: center;
+    
 }
