--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -107,14 +107,37 @@ body,
 
 /* Header */
 
+.name-section
+{
+    position: absolute;
+    left: 0;
+    top: 4%;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    user-select: none;
+    padding-left: 35px;
+}
+
+.name-section > h1
+{
+    margin: 0;
+    font-weight: bolder;
+}
+
+.name-section > h3
+{
+    margin: 0;
+    padding-top: 10px;
+}
+
 .header
 {
     position: fixed;
     left: 0;
-    top: 2%;
+    top: 5%;
     display: flex;
     justify-content: center;
-    padding-top: 2.5px;
     width: 100%;
     height: 10%;
     color: #ffffff; 
@@ -161,6 +184,36 @@ body,
     font-family: "sans-serif, serif, Times New Roman";
 }
 
+/* Audio */
+
+.audio-button
+{
+    position: absolute;
+    right: 1%;
+    bottom: 2%;
+    border-radius: 50%;
+    cursor: pointer;
+    padding-top: 10px;
+    padding-left: 9px;
+    padding-right: 9px;
+    padding-bottom: 5px;
+}
+
+.audio-button-on
+{
+    color: black;
+    background-color: white;
+    border: rgb(0, 0, 0) 2px solid;
+    border-radius: 50%;
+}
+
+.audio-button-off
+{
+    color: white;
+    background-color: #000000f0;
+    border: white 2px solid;
+    border-radius: 50%;
+}
 
 /* About */
 
@@ -172,7 +225,7 @@ body,
     right: 0;
     width: clamp(800px, 60vw, 100%);
     max-width: 100%;
-    height: 68%;
+    height: 70%;
     background-color: #000000f0;
     opacity: 0;
     z-index: -1;
@@ -234,7 +287,7 @@ body,
     right: 0;
     width: clamp(800px, 60vw, 100%);
     max-width: 100%;
-    height: 68%;
+    height: 70%;
     background-color: #000000f0;
     opacity: 0;
     z-index: -1;
@@ -275,7 +328,8 @@ body,
     display: grid;
     grid-template-columns: repeat(4, 100px);
     column-gap: 1rem;
-    height: 80%;
+    row-gap: 1rem;
+    /* height: 75%; */
 }
 
 .skills-item
@@ -309,10 +363,10 @@ body,
     display: flex;
     justify-content: center;
     position: absolute;
-    top: 14%;
+    top: 20%;
     left: 0;
     width: 100%;
-    height: 78%;
+    height: 70%;
     background-color: #000000f0;
     opacity: 0;
     z-index: -1;
@@ -515,7 +569,7 @@ video
     left: 0;
     width: clamp(800px, 60vw, 100%);
     max-width: 100%;
-    height: 68%;
+    height: 70%;
     background-color: #000000f0;
     opacity: 0;
     z-index: -1;
@@ -592,7 +646,7 @@ video
     left: 0;
     width: clamp(800px, 60vw, 100%);
     max-width: 100%;
-    height: 68%;
+    height: 70%;
     background-color: #000000f0;
     opacity: 0;
     z-index: -1;
@@ -648,5 +702,4 @@ video
     border-radius: 0.25em;
     text-decoration: none;
     text-align: center;
-    
 }
