--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -7,6 +7,7 @@ body,
     left: 0;
     width: 100%;
     height: 100%;
+    background-color: #000000;
     overflow: hidden;
 }
 
@@ -26,6 +27,66 @@ body,
     background: #ffffff;
 }
 
+/* Loading Screen */
+
+.loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: inherit;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: opacity 1s;
+    z-index: 1;
+}
+  
+.loading-screen-button {
+    padding: 8px 32px;
+    background-color: rgba(0, 0, 0, 0.24);
+    color: white;
+    border: white 2px solid;
+    border-radius: 0.5em;
+    font-weight: bold;
+    font-size: 2.5rem;
+    border-radius: 8px;
+    transition: background-color 1s;
+    font-family: "Almendra", serif;
+}
+
+.loading-screen-button:hover {
+    background-color: rgba(0, 0, 0, 0.42);
+    cursor: pointer;
+}
+  
+.loading-screen-button:disabled {
+    opacity: 0.3;
+    cursor: not-allowed;
+}
+  
+.loading-screen-progress {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 12px;
+}
+
+.loading-screen-progress-value {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 1);
+    /* transition: width 1s; */
+}
+
+.loading-screen-started {
+    opacity: 0;
+    pointer-events: none;
+}
 
 /* Interface */
 
