--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -106,7 +106,7 @@ body,
     position: absolute;
     bottom: 0;
     left: 50%;
-    width: 25%;
+    width: 20rem;
     height: 40px;
     transform: translateX(-50%) translateY(5%); 
     color: #ffffff;
@@ -122,6 +122,7 @@ body,
     display: flex;
     align-items: center;
     padding: 10px;
+    font-size: clamp(0.6rem, 2vw, 0.85rem);
 }
 
 .contact .icon
@@ -137,7 +138,7 @@ body,
     text-decoration: none; 
     transition-duration: 0.25s;
     transition-timing-function: ease-in-out;
-    font-family: "sans-serif, serif, Times New Roman";
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
     
 }
 
@@ -155,7 +156,7 @@ body,
 
 .contact .text:hover
 {
-    font-size: 17px;
+    font-size: clamp(0.7rem, 2vw, 0.95rem);
 }
 
 .contact .text:hover:after
@@ -177,18 +178,22 @@ body,
     color: white;
     user-select: none;
     padding-left: 35px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: clamp(0.6rem, 2vw, 0.85rem);
 }
 
 .name-section > h1
 {
     margin: 0;
     font-weight: bolder;
+
 }
 
 .name-section > h3
 {
     margin: 0;
     padding-top: 10px;
+    
 }
 
 .header
@@ -219,8 +224,8 @@ body,
 
 .header .title-section .title
 {
-    font-size: 36px;
-    font-family: "sans-serif, serif, Times New Roman";
+    font-size: clamp(2rem, 2vw, 4rem);
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     user-select: none;
 }
 
@@ -235,10 +240,10 @@ body,
     width: 8rem;
     height: 100%;
     border-radius: 0.2em;
-    font-size: 36px;
+    font-size: clamp(0.6rem, 2vw, 1rem);
     cursor: pointer;
     user-select: none;
-    font-family: "sans-serif, serif, Times New Roman";
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 /* Audio */
@@ -295,14 +300,12 @@ body,
     color: #ffffff;
     user-select: none;
     pointer-events: none;
-    /* padding-left: 35px; */
-    /* padding-right: 35px; */
-    font-family: "sans-serif, serif, Times New Roman";
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .about-description
 {
-    font-size: 20px;
+    font-size: clamp(0.8rem, 2vw, 1rem);
     line-height: 2rem;
     padding-top: 5px;
     padding-left: 35px;
@@ -315,7 +318,7 @@ body,
     display: flex;
     justify-content: center;
     margin-top: 10px;
-    /* margin-bottom: 15px; */
+
 }
 
 .about-profile > img
@@ -380,12 +383,13 @@ body,
     padding-top: 35px;
     padding-left: 35px;
     padding-right: 35px;
-    font-family: "sans-serif, serif, Times New Roman";
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
 .skills-category > h1
 {
+    font-size: clamp(1rem, 2vw, 1.5rem);
     text-align: center;
     background-color: rgb(0, 0, 0);
     padding: 18px;
@@ -398,7 +402,7 @@ body,
 .skills-list
 {
     display: grid;
-    grid-template-columns: repeat(4, 100px);
+    grid-template-columns: repeat(4, 70px);
     column-gap: 1rem;
     row-gap: 1rem;
     /* height: 75%; */
@@ -412,19 +416,20 @@ body,
     border-color:white;
     border-width: 3px;
     border-style: solid;
-    height: 100px;
+    height: 4.5rem;
 }
 
 .skills-item > svg
 {
     padding-top: 10px;
-    width: 60%;
-    height: 60%;
+    width: 45%;
+    height: 45%;
 }
 
 .skills-item > h4
 {
-    padding: 0;
+    font-size: clamp(0.5rem, 2vw, 0.7rem);
+    padding-top: 5px;
     margin: 0;
 }
 
@@ -451,13 +456,13 @@ body,
     display: grid;
     grid-template-columns: auto;
     column-gap: 1rem;
-    row-gap: 5rem;
+    row-gap: 3rem;
     color: #ffffff;
     user-select: none;
     padding-top: 35px;
     padding-left: 35px;
     padding-right: 35px;
-    font-family: "sans-serif, serif, Times New Roman";
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     width: 100%;
 }
 
@@ -465,31 +470,31 @@ body,
 {
     display: flex;
     flex-direction: row;
-    height: 750px;
+    height: 40rem;
     background-color: rgb(0, 0, 0);
     border-radius: 0.5em;
     border-width: 2px;
     border-color: white;
     border-style: solid;
-    /* text-align: center; */
 }
 
 .left-card
 {
     position: relative;
     width: 40%;
-    height: 75%;
+    height: clamp(70%, 2vh, 90%);
     top: 12%;
     left: 3.5%;
     border-radius: 0.5em;
     border-style: solid;
     border-width: 2px;
     border-color: white;
-    font-size: clamp(1rem, 2vw, 1.25rem);
+    /* font-size: clamp(0.6rem, 2vw, 0.9rem); */
 }
 
 .left-card > h1
 {
+    font-size: 1.8rem;
     text-align: center;
     padding-top: 10px;
 }
@@ -502,6 +507,7 @@ body,
 
 .left-card > p
 {
+    font-size: clamp(0.6rem, 2vw, 0.9rem);
     line-height: clamp(1rem, 2vw, 2rem);
     padding-top: 10px;
     padding-left: 30px;
@@ -510,29 +516,33 @@ body,
 
 .project-skills
 {
+    padding-top: 10px;
     display: flex;
     flex-direction: row;
-    gap: 15px;
     justify-content: center;
+    gap: 8px;
 }
 
 .project-skills > p
 {
-    padding: 10px;
+    padding: clamp(2px, 1vw, 8px);
+    font-size: 1rem;
+    margin: 0;
     background-color: #1f1f1ff0;
     border-radius: 0.5em;
     border-color: white;
     border-width: 2px;
     border-style: solid;
+
 }
 
 .project-links
 {
     display: flex;
     flex-direction: row;
-    gap: 30px;
     justify-content: center;
-    padding-top: 15px;
+    gap: 1rem;
+    padding-top: 20px;
 }
 
 .project-link-button
@@ -541,8 +551,8 @@ body,
     display: inline-block;
     cursor: pointer;
     border-radius: 0.5em;
-    padding: 0.5em 0em;
-    width: 20%;
+    width: clamp(1rem, 7vw, 5rem);
+    padding: 0.5em;
     text-align: center;
     text-decoration: none;
     font-weight: bold;
@@ -603,7 +613,7 @@ body,
 video
 {
     width: 100%;
-    height: 75%;
+    height: clamp(70%, 2vh, 90%);
     border-radius: 0.5em;
     border-color: white;
     border-style: solid;
@@ -611,7 +621,7 @@ video
 }
 
 /* For tablets */
-@media (max-width: 1280px) 
+@media (max-width: 1024px) 
 {
     .project-skills
     {
@@ -628,8 +638,16 @@ video
 
     .left-card > p
     {
+        padding-top: 0px;
         padding-left: 12px;
         padding-right: 12px;
+    }
+
+    .left-card > h1
+    {
+        font-size: 1.5rem;
+        text-align: center;
+        padding-top: 10px;
     }
 }
 
@@ -657,15 +675,13 @@ video
 {
     display: flex;
     justify-content: center;
-    /* width: 100%; */
-    /* height: 100%; */
     color: #ffffff;
     user-select: none;
     pointer-events: none;
     padding-top: 35px;
     padding-left: 35px;
     padding-right: 35px;
-    font-family: "sans-serif, serif, Times New Roman";
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     direction: ltr;
 }
 
@@ -682,7 +698,7 @@ video
     display: flex;
     flex-direction: row;
     align-items: center;
-    font-size: clamp(0.75rem, 2vw, 1rem);
+    font-size: clamp(0.7rem, 2vw, 1rem);
 }
 
 .experience-card-header > h1
@@ -708,7 +724,7 @@ video
     padding-left: 25px;
     padding-right: 25px;
     line-height: 2rem;
-    font-size: 1.25rem;
+    font-size: clamp(0.8rem, 2vw, 1rem);
 }
 
 /* Resume */
@@ -721,6 +737,7 @@ video
     top: 18%;
     left: 0;
     width: clamp(800px, 60vw, 100%);
+    /* width: clamp(20rem, 2vw, 10rem); */
     max-width: 100%;
     height: 70%;
     background-color: #000000f0;
@@ -737,7 +754,7 @@ video
     padding-top: 35px;
     padding-left: 35px;
     padding-right: 35px;
-    font-family: "sans-serif, serif, Times New Roman";
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     direction: ltr;
 }
 
@@ -746,7 +763,7 @@ video
     display: flex;
     justify-content: center;
     padding: 10px;
-    width: 900px;
+    width: 42rem;
     padding-top: 30px;
     border-style: solid;
     border-width: 2px;
@@ -756,7 +773,7 @@ video
 
 .resume-item > img
 {
-    width: 850px;
+    width: 40rem;
     padding-bottom: 25px;
 }
 
@@ -771,7 +788,7 @@ video
 {
     border-radius: 0.25em;
     padding: 15px;
-    font-size: 2rem;
+    font-size: clamp(1rem, 2vw, 1.5rem);
     font-weight: bold;
     text-decoration: none;
     text-align: center;
