--- a/my-portfolio/public/css/MobileApp.css
+++ b/my-portfolio/public/css/MobileApp.css
@@ -7,6 +7,6 @@ body,
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #ffffff;
+    background-color: #ed0b0b;
     /* overflow: scroll; */
 }
