--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -2,7 +2,11 @@ html,
 body,
 #root
 {
-    /* position: fixed; */
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
     background: radial-gradient(#1f1f1f, #000000);
     overflow: hidden;
 }
@@ -12,8 +16,8 @@ body,
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     overflow: hidden;
 }
 
@@ -96,6 +100,7 @@ body,
 
 .interface
 {
+    /* position: fixed; */
     top: 0;
     left: 0;
     width: 100%;
