--- a/my-portfolio/public/css/MobileApp.css
+++ b/my-portfolio/public/css/MobileApp.css
@@ -393,9 +393,8 @@ body,
     margin: 0;
     background-color: #1f1f1ff0;
     border-radius: 0.5em;
-    border-color: white;
-    border-width: 2px;
-    border-style: solid;
+    border: white 2px solid;
+    text-align: center;
 
 }
 
