--- a/my-portfolio/src/MobileApp.css
+++ b/my-portfolio/src/MobileApp.css
@@ -393,9 +393,8 @@ body,
     margin: 0;
     background-color: #1f1f1ff0;
     border-radius: 0.5em;
-    border-color: white;
-    border-width: 2px;
-    border-style: solid;
+    border: white 2px solid;
+    text-align: center;
 
 }
 
@@ -483,6 +482,14 @@ video
     text-align: center;
 }
 
+.experience-card
+{
+    /* height: auto; */
+    /* width: 95%; */
+    /* border: white 2px solid;
+    border-radius: 0.5em; */
+}
+
 .experience-card-header
 {
     display: flex;
@@ -512,6 +519,65 @@ video
     padding-right: 12px;
     line-height: 2rem;
     font-size: clamp(0.8rem, 2vw, 1rem);
+}
+
+/* Resume */
+
+.resume
+{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: clamp(800px, 60vw, 100%);
+    /* width: clamp(20rem, 2vw, 10rem); */
+    max-width: 100%;
+    height: 70%;
+    background-color: #000000f0;
+    opacity: 1;
+    z-index: 0;
+}
+
+.resume-section
+{
+    color: #ffffff;
+    user-select: none;
+    padding-top: 35px;
+    padding-left: 35px;
+    padding-right: 35px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    direction: ltr;
+}
+
+.resume-item
+{
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    width: 42rem;
+    padding-top: 30px;
+}
+
+.resume-item > img
+{
+    width: 25rem;
+    padding-bottom: 25px;
+}
+
+.resume-download
+{
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+}
+
+.resume-download > a
+{
+    border-radius: 0.25em;
+    padding: 15px;
+    font-size: clamp(1rem, 2vw, 1.5rem);
+    font-weight: bold;
+    text-decoration: none;
+    text-align: center;
 }
 
 
