--- a/my-portfolio/public/css/MobileApp.css
+++ b/my-portfolio/public/css/MobileApp.css
@@ -482,13 +482,13 @@ video
     text-align: center;
 }
 
-.experience-card
-{
+/* .experience-card
+{ */
     /* height: auto; */
     /* width: 95%; */
     /* border: white 2px solid;
     border-radius: 0.5em; */
-}
+/* } */
 
 .experience-card-header
 {
@@ -521,4 +521,240 @@ video
     font-size: clamp(0.8rem, 2vw, 1rem);
 }
 
+/* Resume */
 
+.resume
+{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    /* width: clamp(800px, 60vw, 100%); */
+    /* width: clamp(20rem, 2vw, 10rem); */
+    max-width: 100%;
+    height: 70%;
+    background-color: #000000f0;
+    opacity: 1;
+    z-index: 0;
+}
+
+.resume-section
+{
+    color: #ffffff;
+    user-select: none;
+    padding-top: 35px;
+    padding-left: 35px;
+    padding-right: 35px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    direction: ltr;
+}
+
+.resume-title
+{
+    text-align: center;
+    margin: 0;
+}
+
+.resume-item
+{
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    width: 42rem;
+    padding-top: 30px;
+}
+
+.resume-item > img
+{
+    width: 24.5rem;
+    padding-bottom: 25px;
+}
+
+
+/* Contacts */
+
+.contact-modal-container {
+    pointer-events: auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    opacity: 1;
+    z-index: 0;
+    overflow: hidden;
+}
+
+.contact-title
+{
+    text-align: center;
+    color: white;
+    margin-top: 1rem;
+    margin-bottom: 2.5rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+
+.contact-modal-container.visible {
+    opacity: 1;
+    visibility: visible;
+}
+
+.contact-modal
+{
+    position: relative;
+    height: 21.5rem;
+    width: 22rem;
+    border: white 2px solid;
+    border-radius: 0.5em;
+    background: #000000f0;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 25px;
+    padding-bottom: 50px;
+}
+
+.contact-modal form
+{
+    user-select: none;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+}
+
+.contact-modal .name-and-email
+{
+    display: grid;
+    column-gap: 0.5rem;
+    grid-template-columns: 49% 49%;
+}
+
+.contact-modal input
+{
+    padding: 10px;
+    color: white;
+    background-color: #000000f0;
+    font-size: large;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.contact-modal input::placeholder 
+{
+    color: #a1a1a1;
+}
+
+.contact-modal textarea
+{
+    /* resize: vertical; */
+    resize: none;
+    padding: 15px;
+    color: white;
+    line-height: 1.5rem;
+    background-color: #000000f0;
+    font-size: large;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.contact-modal textarea::placeholder
+{
+    color: #a1a1a1;
+}
+
+.contact-modal button
+{
+    width: 8rem;
+    padding: 15px;
+    align-self: center;
+    border-radius: 0.5em;
+    font-size:xx-small;
+}
+
+.contact-modal button h1
+{
+    margin: 0;
+}
+
+.contacts-bar
+{
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 20rem;
+    height: 40px;
+    transform: translateX(-50%) translateY(5%); 
+    color: #ffffff;
+    background: #000000f0;
+    border-top-left-radius: 0.5em;
+    border-top-right-radius: 0.5em;
+    border: white 2px solid;
+    user-select: none;
+}
+
+.contact
+{
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    font-size: clamp(0.6rem, 2vw, 0.85rem);
+}
+
+.contact .icon
+{
+    font-size: clamp(1rem, 2vw, 1.2rem);
+    padding-left: 5px;
+}
+
+.contact .text
+{
+    display: flex;
+    justify-content: center;
+    padding-top: 5px;
+    position: relative;
+    color: #ffffff;
+    text-decoration: none; 
+    transition-duration: 0.25s;
+    transition-timing-function: ease-in-out;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif  
+}
+
+.contact .text > span
+{
+    padding-top: 2px;
+}
+
+.contact .text .icon
+{
+    padding-bottom: 6px;
+}
+
+.contact .text:after
+{
+    content: '';
+    position: absolute;
+    width: 0; height: 3px;
+    display: block;
+    right: 0;
+    bottom: 0;
+    background: #ffffff;
+    transition: width .2s ease;
+    -webkit-transition: width .2s ease;
+}
+
+.contact .text:hover
+{
+    font-size: clamp(0.65rem, 2vw, 0.9rem);
+}
+
+.contact .text:hover:after
+{
+    width: 100%;
+    left: 0;
+    background: #ffffff;
+}
+
+.contact .text
+{
+    cursor: pointer;
+}
