Changed separate mobile and desktop css style to be a single css file that uses media queries and also readded fade in and out on contact modal

--- a/my-portfolio/public/css/App.css
+++ b/my-portfolio/public/css/App.css
@@ -126,6 +126,7 @@ body,
 .contact-modal-container.visible {
     opacity: 1;
     visibility: visible;
+    /* transition: opacity 500ms ease, visibility 0s 500ms; */
 }
 
 .contact-modal-container.hidden {
