--- a/my-portfolio/public/css/MobileApp.css
+++ b/my-portfolio/public/css/MobileApp.css
@@ -597,6 +597,7 @@ video
 .contact-modal-container.visible {
     opacity: 1;
     visibility: visible;
+    /* transition: opacity 500ms ease, visibility 0s 500ms; */
 }
 
 .contact-modal
