--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -119,7 +119,7 @@ body,
     height: 95vh;
     opacity: 0;
     visibility: hidden;
-    /* transition: opacity 500ms ease; */
+    transition: opacity 500ms ease;
     z-index: 999;
 }
 
@@ -132,7 +132,7 @@ body,
     opacity: 0;
     pointer-events: none;
     cursor: default;
-    /* transition: opacity 500ms ease, visibility 0s 500ms; */
+    transition: opacity 500ms ease, visibility 0s 500ms;
 }
 
 .contact-modal-container.hidden .icon {
@@ -965,4 +965,800 @@ video
 }
 
 /* Mobile Media Queries */
+
+@media (max-width: 1023px)
+{
+    html,
+    body,
+    #root
+    {
+
+        /* position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: radial-gradient(#1f1f1f, #000000);
+    overflow: hidden; */
+
+        position: unset;
+        height: unset;
+        width: unset;
+        margin: 0;
+        padding: 0;
+        background: #000000f0;
+        overflow-y: scroll;
+        overflow-x: hidden;
+    }
+
+    /* Scrollbar */
+    ::-webkit-scrollbar {
+        width: 0;
+        display: none;
+    }
+
+    ::-webkit-scrollbar-track {
+        background: transparent;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background: transparent;
+    }
+
+    /* Neon Effect */
+    .neon-effect
+    {
+        color: white;
+        border: white 0.1em solid;
+        background-color: #000000f0;
+        text-shadow: 0 0 0.5em hsl(0, 0%, 100% / 0.75);
+        box-shadow: inset 0 0 0.5em 0 hsl(0, 0%, 100%), 0 0 0.5em 0 hsl(0, 0%, 100%);
+        transition: background-color 100ms linear;
+    }
+
+    .neon-effect::after
+    {
+        content: "";
+        position: relative;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        border-radius: 0.5em;
+        box-shadow: 0 0 2em 0.5em hsl(0, 0%, 100%);
+        opacity: 0;
+        transition: opacity 100ms linear;
+    }
+
+    .neon-effect:hover,
+    .neon-effect:focus
+    {
+        background-color: hsl(0, 0%, 100%);
+        color: black;
+        text-shadow: none;
+        cursor: pointer;
+    }
+
+    .neon-effect:focus:not(:hover) 
+    {
+        color: hsl(0, 0%, 100%);
+        background-color: #000000f0;
+    }
+
+    .neon-effect:hover::after
+    {
+        opacity: 0.25;
+    }
+
+    /* Loading Screen */
+    .loading-screen {
+        background: radial-gradient(#272727, #000000);
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background-color: inherit;
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+        transition: opacity 0.5s ease-in-out;
+        z-index: 1;
+        overflow: hidden;
+    }
+    
+    .loading-screen-button {
+        padding: 8px 32px;
+        background-color: rgba(0, 0, 0, 0.24);
+        color: white;
+        border: white 2px solid;
+        border-radius: 0.5em;
+        font-weight: bold;
+        font-size: 2.5rem;
+        border-radius: 8px;
+        user-select: none;
+    }
+
+    .loading-screen-button:disabled {
+        opacity: 0.25;
+        cursor: not-allowed;
+    }
+    
+    .loading-screen-progress {
+        position: relative;
+        top: 2rem;
+        width: 100%;
+        height: 12px;
+    }
+
+    .loading-screen-progress-value {
+        position: absolute;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        background-color: white;
+        border-radius: 0.5em;
+        box-shadow: 0 0 12px rgb(255, 255, 255);
+        transition: width 1s;
+    }
+
+
+    .loading-screen-started {
+        opacity: 0;
+        pointer-events: none;
+    }
+
+    .canvas-container
+    {
+        position: relative;
+        height: 70vh;
+        width: 100vw;
+        overflow: hidden;
+    }
+
+    /* About */
+
+    .about
+    {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        width: 100%;
+        max-width: 100%;
+        height: 100%;
+        background-color: #000000f0;
+        opacity: 1;
+        z-index: 0;
+        
+    }
+
+    .about-section
+    {
+        color: #ffffff;
+        user-select: none;
+        pointer-events: none;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+
+    .about-title
+    {
+        margin-top: 2rem;
+        margin-bottom: 1rem;
+        text-align: center;
+    }
+
+    .about-description
+    {
+        font-size: clamp(0.8rem, 2vw, 1rem);
+        line-height: 1.5rem;
+    }
+
+    .about-profile
+    {
+        display: flex;
+        justify-content: center;
+        margin-top: 10px;
+    }
+
+    .about-profile > img
+    {
+        width: 50%;
+        border-radius: 0.5em;
+        border: white 2px solid;
+        margin-bottom: 25px;
+    }
+
+    .about-item
+    {
+        padding-right: 15px;
+        padding-left: 15px;
+        padding-bottom: 15px;
+    }
+
+    .about-item .section-title
+    {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+    }
+
+    .about-item .section-title .icon
+    {
+        font-size: 1.8rem;
+    }
+
+    .about-item > hr
+    {
+        display: block;
+        width: 95%;
+    }
+
+    /* Skills */
+
+    .skills
+    {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        /* width: clamp(800px, 60vw, 100%); */
+        max-width: 100%;
+        width: 100%;
+        height: 70%;
+        background-color: #000000f0;
+        opacity: 1;
+        z-index: 0;
+    }
+
+    .skills-section
+    {
+        display: grid;
+        grid-template-columns: auto;
+        width: 100%;
+        column-gap: 3rem;
+        row-gap: 0rem;
+        color: #ffffff;
+        user-select: none;
+        pointer-events: none;
+        padding-top: 10px;
+        padding-left: 20px;
+        padding-right: 20px;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+
+    .skills-title
+    {
+        text-align: center;
+        margin-top: 0rem;
+        margin-bottom: 1.5rem;
+    }
+
+
+    .skills-category > h1
+    {
+        font-size: clamp(1rem, 2vw, 1.5rem);
+        text-align: center;
+        background-color: rgb(0, 0, 0);
+        margin-bottom: 1.5rem;
+    }
+
+    .skills-list
+    {
+        padding-top: 15px;
+        padding-bottom: 15px;
+        display: grid;
+        grid-template-columns: repeat(4, clamp(4rem, 16vw, 24rem));
+        column-gap: 1rem;
+        row-gap: 1rem;
+        justify-self: center;
+        /* height: 75%; */
+    }
+
+    .skills-item
+    {
+        text-align: center;
+        background-color: #1f1f1ff0;
+        border-radius: 0.5em;
+        border: 3px solid white;
+        height: clamp(4.5rem, 10vw, 8rem);
+    }
+
+    .skills-item > svg
+    {
+        padding-top: 1rem;
+        width: clamp(1.5rem, 4vw, 3rem);
+        height: clamp(1.5rem, 4vw, 3rem);
+    }
+
+    .skills-item > h4
+    {
+        font-size: clamp(0.5rem, 2vw, 1.0rem);
+        padding-top: 5px;
+        margin: 0;
+    }
+
+
+    /* Projects */
+
+    .projects {
+        display: flex;
+        justify-content: unset;
+        position: relative;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        background-color: #000000f0;
+        opacity: 1;
+        z-index: 0;
+    }
+
+    .projects-section
+    {
+        display: flex;
+        flex-direction: column;
+        color: #ffffff;
+        user-select: none;
+        padding-top: 0;
+        padding-left: 15px;
+        padding-right: 15px;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        width: 100%;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        gap: 3rem;
+    }
+
+    .project-title
+    {
+        color: white;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        text-align: center;
+        margin-top: 3rem;
+        margin-bottom: 3rem;
+        user-select: none;
+    }
+
+    .project-card {
+        padding-bottom: 15px;
+        height: unset;
+        width: 95%;
+        align-self: center;
+        display: flex;
+        flex-direction: column-reverse;  
+        border: white 2px solid;
+        border-radius: 0.8em;
+        background: #000000;
+        overflow: hidden;      
+    }
+
+    .left-card
+    {
+        position: relative;
+        width: 100%;
+        height: clamp(70%, 2vh, 90%);
+        height: 50%;
+        border: none;
+        border-radius: unset;
+        left: unset;
+        top: unset;
+    }
+
+    .left-card > h1
+    {
+        font-size: 1.3rem;
+        text-align: center;
+        padding-top: 10px;
+    }
+
+    .left-card > hr
+    {
+        display: block;
+        width: 75%;
+    }
+
+    .left-card > p
+    {
+        font-size: clamp(1rem, 2vw, 1.3rem);
+        line-height: clamp(1.5rem, 2vw, 2rem);
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .project-skills
+    {
+        padding-top: 10px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 8px;
+    }
+
+    .project-skills > p
+    {
+        padding: clamp(2px, 1vw, 8px);
+        font-size: 1rem;
+        margin: 0;
+        background-color: #1f1f1ff0;
+        border-radius: 0.5em;
+        border: white 2px solid;
+        text-align: center;
+
+    }
+
+    .project-links
+    {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 1rem;
+        padding-top: 20px;
+    }
+
+    .project-link-button
+    {
+        position: relative;
+        display: inline-block;
+        cursor: pointer;
+        border-radius: 0.5em;
+        width: clamp(5rem, 7vw, 7rem);
+        padding: 0.5em;
+        text-align: center;
+        text-decoration: none;
+        font-weight: bold;
+    }
+
+    .right-card
+    {
+        position: relative;
+        top: 0;
+        width: 100%;
+        left: unset;
+    }
+
+    video
+    {
+        width: 100%;
+        /* height: clamp(70%, 2vh, 90%); */
+        /* height: 10%; */
+        border: none;
+        border-radius: unset;
+    }
+
+    .nighttimer-container
+    {
+        display: flex;
+        justify-content: center;
+    }
+
+    .nighttimer
+    {
+        width: 35%;   
+    }
+
+    /* Experience */
+
+    .experience
+    {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        top: unset;
+        left: unset;
+        width: unset;
+        overflow: hidden;
+        direction: unset;
+        max-width: 100%;
+        height: 70%;
+        background-color: #000000f0;
+        opacity: 1;
+        z-index: 0;
+    }
+
+    .experience-section
+    {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        color: #ffffff;
+        user-select: none;
+        pointer-events: none;
+        padding-top: 35px;
+        padding-left: 8px;
+        padding-right: 8px;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        direction: ltr;
+    }
+
+    .experience-title
+    {
+        text-align: center;
+        margin-bottom: 2.5rem;
+    }
+
+    .experience-card
+    { 
+       border: none;
+       border-radius: unset;
+    }
+
+    .experience-card-header
+    {
+        display: flex;
+        flex-direction: column;
+        align-items: unset;
+        font-size: clamp(0.7rem, 2vw, 1rem);
+    }
+
+    .experience-card-header > h1
+    {
+        padding-left: 20px;
+        margin: 0;
+    }
+
+    .experience-card-header > h2
+    {
+        padding-left: 20px;
+    }
+
+    .experience-card > hr
+    {
+        width: 94%;
+    }
+
+    .experience-card-body
+    {
+        padding-left: 12px;
+        padding-right: 12px;
+        line-height: 2rem;
+        font-size: clamp(0.8rem, 2vw, 1rem);
+    }
+
+    /* Resume */
+
+    .resume
+    {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        top: unset;
+        left: unset;
+        width: unset;
+        max-width: 100%;
+        height: 70%;
+        background-color: #000000f0;
+        opacity: 1;
+        z-index: 0;
+        overflow: hidden;
+        direction: unset;
+    }
+
+    .resume-section
+    {
+        color: #ffffff;
+        user-select: none;
+        padding-top: 35px;
+        padding-left: 35px;
+        padding-right: 35px;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        direction: ltr;
+    }
+
+    .resume-title
+    {
+        text-align: center;
+        margin-top: 0;
+        margin-bottom: 1rem;
+    }
+
+    .resume-item
+    {
+        display: flex;
+        justify-content: center;
+        padding: 10px;
+        width: 42rem;
+        padding-top: 30px;
+        border: none;
+        border-radius: unset;
+    }
+
+    .resume-item > img
+    {
+        width: clamp(18rem, 75vw, 60rem);
+        padding-bottom: 25px;
+    }
+
+
+    /* Contacts */
+
+    .contact-modal-container {
+        width: unset;
+        height: unset;
+        pointer-events: auto;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+        opacity: 1;
+        z-index: 0;
+        overflow-x: hidden;
+    }
+
+    .contact-title
+    {
+        text-align: center;
+        color: white;
+        margin-top: 1rem;
+        margin-bottom: 2.5rem;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    }
+
+    .contact-modal-container.visible {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .contact-modal
+    {
+        position: relative;
+        height: 22rem;
+        width: clamp(14rem, 75vw, 75rem);
+        border: white 2px solid;
+        border-radius: 0.5em;
+        background: #000000f0;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-top: 25px;
+        padding-bottom: 50px;
+    }
+
+    .contact-modal form
+    {
+        user-select: none;
+        display: flex;
+        flex-direction: column;
+        row-gap: 1rem;
+    }
+
+    .contact-modal .name-and-email
+    {
+        display: grid;
+        column-gap: 0.5rem;
+        grid-template-columns: 49% 49%;
+    }
+
+    .contact-modal input
+    {
+        padding: 10px;
+        color: white;
+        background-color: #000000f0;
+        font-size: large;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+
+    .contact-modal input::placeholder 
+    {
+        color: #a1a1a1;
+    }
+
+    .contact-modal textarea
+    {
+        resize: none;
+        padding: 15px;
+        color: white;
+        line-height: 1.5rem;
+        background-color: #000000f0;
+        font-size: large;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+
+    .contact-modal textarea::placeholder
+    {
+        color: #a1a1a1;
+    }
+
+    .contact-modal button
+    {
+        width: 8rem;
+        padding: 15px;
+        align-self: center;
+        border-radius: 0.5em;
+        font-size:xx-small;
+    }
+
+    .contact-modal button h1
+    {
+        margin: 0;
+    }
+
+    .contacts-bar
+    {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        bottom: unset;
+        left: unset;
+        width: unset;
+        height: unset;
+        transform: unset;
+        border-radius: unset;
+        border: none;
+        color: #ffffff;
+        background: #131313f0;
+        margin-top: 2rem;
+        user-select: none;
+    }
+
+    .contact
+    {
+        display: flex;
+        align-items: center;
+        padding: 10px;
+        font-size: clamp(0.6rem, 2vw, 0.85rem);
+    }
+
+    .contact .icon
+    {
+        font-size: clamp(1rem, 2vw, 1.2rem);
+        padding-left: 5px;
+    }
+
+    .contact .text
+    {
+        display: flex;
+        justify-content: center;
+        padding-top: 5px;
+        position: relative;
+        color: #ffffff;
+        text-decoration: none; 
+        transition-duration: 0.25s;
+        transition-timing-function: ease-in-out;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif  
+    }
+
+    .contact .text > span
+    {
+        padding-top: 2px;
+    }
+
+    .contact .text .icon
+    {
+        padding-bottom: 6px;
+    }
+
+    .contact .text:after
+    {
+        content: '';
+        position: absolute;
+        width: 0; height: 3px;
+        display: block;
+        right: 0;
+        bottom: 0;
+        background: #ffffff;
+        transition: width .2s ease;
+        -webkit-transition: width .2s ease;
+    }
+
+    .contact .text:hover
+    {
+        font-size: clamp(0.65rem, 2vw, 0.9rem);
+    }
+
+    .contact .text:hover:after
+    {
+        width: 100%;
+        left: 0;
+        background: #ffffff;
+    }
+
+    .contact .text
+    {
+        cursor: pointer;
+    }
+}
 
